--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,7 @@
   },
   "plugins": ["react", "@typescript-eslint", "react-hooks", "prettier"],
   "rules": {
+    "react/prop-types": "off",
     "linebreak-style": "off",
     "@typescript-eslint/no-explicit-any": "off",
     "indent": "off",
